<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frameLayout_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/cl_style"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="100dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/record_1"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/record_2"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/result_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/record_3"
            android:textSize="20sp" />
    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_result"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_result"
        app:layout_constraintTop_toTopOf="@+id/frameLayout_result" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout_result"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_result"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_result" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:background="@drawable/btn"
        android:text="@string/home"
        android:textColor="@color/dialog_btn_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/exam"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout_result"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout_result"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/frameLayout_result"
        app:layout_constraintTop_toTopOf="@+id/frameLayout_result"
        app:layout_constraintVertical_bias="0.52" />

</androidx.constraintlayout.widget.ConstraintLayout>